--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css?t=234628736428">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+   <script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
+   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.703a23e48ad83c851e49.js" type="module"></script><script src="polyfills-es2015.6ea0b72173d453e298a9.js" type="module"></script><script src="runtime-es5.465c2333d355155ec5f3.js" nomodule></script><script src="polyfills-es5.03d8c9fc4ed8e610412b.js" nomodule></script><script src="main-es2015.973da690eb65953cb51d.js" type="module"></script><script src="main-es5.0d850b8918302256fdb9.js" nomodule></script></body>
+<script src="runtime-es2015.703a23e48ad83c851e49.js" type="module"></script><script src="polyfills-es2015.6ea0b72173d453e298a9.js" type="module"></script><script src="runtime-es5.465c2333d355155ec5f3.js" nomodule></script><script src="polyfills-es5.03d8c9fc4ed8e610412b.js" nomodule></script><script src="main-es2015.6aab9013f6cf198406e0.js" type="module"></script><script src="main-es5.470e0bd2baa1c66609f0.js" nomodule></script></body>
 </html>
